@@ -57,11 +57,6 @@ static gint sqr(gint a)
 	return a * a;
 }
 
-GdkPixmap *guimap_terrain(Terrain terrain)
-{
-	return theme_get_current()->terrain_tiles[terrain];
-}
-
 GuiMap *guimap_new(void)
 {
 	GuiMap *gmap;
